fixed the navbar which had a problem with the width in the home.html page

--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/about.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  </head>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">  
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
+</head>
   
 <!-- Header with the nav bar and the logo of the company -->  
 <div id="page-wrapper">
@@ -13,7 +15,7 @@
       <nav>
         <div class="logo">
           <a href="#">
-              <img id="header-img" src="./img/Logo Sweeten (1).jpg" alt="Sweeten, the company logo">
+              <img id="header-img" src="./img/logo.jpg" alt="Sweeten, the cakery logo">
           </a>
       </div>
           <input type="checkbox" id="nav">
@@ -52,9 +54,7 @@
       <h2>The best bakery in the city</h2>
       <hr>
       <p>
-        Parfait pour manger de bons plats, pour un apéritif renforcé, pour votre fête avec tous vos amis, pour un tête-à-tête romantique, pour un dîner tardif ou pour terminer une soirée avec une boisson incroyable.
-Nous connaissons personnellement les producteurs de nos ingrédients.
-Notre objectif est de choisir chaque ingrédient et vous les offrir au juste prix.<br><br> Le restaurant "LaunchHouse" est dédié à tous ceux qui aiment les bonnes choses, comme nous.
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled i.<br><br> We are in Stockholm.
       </p>
     </div>
     
@@ -71,8 +71,7 @@ Notre objectif est de choisir chaque ingrédient et vous les offrir au juste pri
       <h2>We sweeten your wedding</h2>
       <hr>
       <p>
-        Le restaurant "LaunchHouse" a ouvert ses portes pour la première fois en 1991 dans un petit immeuble art déco. La salle à manger ne comprenait que six tables. Ce n'est que plus tard qu'un célèbre architecte un soir - ne pouvant pas s'asseoir car le restaurant était plein - s'est immédiatement mis à faire des dessins sur juste un petit morceau de papier et a fait cette table supplémentaire possible, surnommée par tout le monde «LaunchHouse».
-En 1998, le restaurant a déménagé et a 11 tables. Il se compose d'une cuisine, qui n'est pas très grande, mais qui nous permet de travailler avec sérénité et joie. Notre équipe de cuisine et de service essaie de vous ravir en équilibrant la gastronomie évolutive et avancée avec le respect des règles nécessaires de l'hospitalité traditionnelle.
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled i
       </p>
     </div>
   </section>
