--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/contact.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  </head>  
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">  
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+</head>  
 <body>  
   
 <!-- Header with the nav bar and the logo of the company -->  
@@ -14,7 +15,7 @@
       <nav>
         <div class="logo">
           <a href="#">
-              <img id="header-img" src="./img/Logo Sweeten (1).jpg" alt="Sweeten, the company logo">
+              <img id="header-img" src="./img/logo.jpg" alt="Sweeten, the cakery logo">
           </a>
       </div>
           <input type="checkbox" id="nav">
