solved problem in the css contact form

--- a/products.html
+++ b/products.html
@@ -70,6 +70,7 @@
           <img src="./img/wedding-cakes/cake1.jpg" alt="cake">
           <div class="text">
             <h3>Classic Red Velvet</h3>
+            <br>
             <p>Melt in your mouth Red Velvet Cake made with a cream cheese filling</p>
             <button>250 SEK</button>
           </div>
@@ -78,6 +79,7 @@
           <img src="./img/wedding-cakes/cake2.jpg" alt="cake">
           <div class="text">
             <h3>Supreme Vanilla</h3>
+            <br>
             <p>Full of flavor Vanilla Cake with a Caramel Cream Filling</p>
             <button>250 SEK</button>
           </div>
@@ -86,6 +88,7 @@
           <img src="./img/wedding-cakes/cake3.jpg" alt="cake">
           <div class="text">
             <h3>Sprint Lemon Cake</h3>
+            <br>
             <p>Lemon pound cake, and blueberry marmalade and white chocolate mousse fillings</p>
             <button>250 SEK</button>
           </div>
@@ -94,6 +97,7 @@
           <img src="./img/wedding-cakes/cake4.jpg" alt="cake">
           <div class="text">
             <h3>Winter Gingerbread</h3>
+            <br>
             <p>Layers of gingerbread cake with lemon mousse filling</p>
             <button>250 SEK</button>
           </div>
@@ -102,6 +106,7 @@
           <img src="./img/wedding-cakes/cake5.jpg" alt="cake">
           <div class="text">
             <h3>Black Forest Cake</h3>
+            <br>
             <p>Chocolate ganache, whipped cream, and cherries in between layers of dark chocolate </p>
             <button>250 SEK</button>
           </div>
@@ -110,6 +115,7 @@
           <img src="./img/wedding-cakes/cake6.jpg" alt="cake">
           <div class="text">
             <h3>Berries-N-Cream Cake</h3>
+            <br>
             <p>Velvety white cake with mixed berries and a velvety cheesecake in between each layer</p>
             <button>250 SEK</button>
           </div>
@@ -118,6 +124,7 @@
           <img src="./img/wedding-cakes/cake7.jpg" alt="cake">
           <div class="text">
             <h3>Death By Chocolate</h3>
+            <br>
             <p>Layers of dark chocolate cake, with chocolate mousse and chocolate ganache in between each layer</p>
             <button>250 SEK</button>
           </div>
@@ -126,6 +133,7 @@
           <img src="./img/wedding-cakes/cake8.jpg" alt="cake">
           <div class="text">
             <h3>Sunshine Cake</h3>
+            <br>
             <p>Double chocolate cake soaked with Kahlua, and filled with a mocha buttercream and chocolate ganache</p>
             <button>250 SEK</button>
           </div>
@@ -143,6 +151,7 @@
           <img src="./img/cupcakes/Cupcake1.jpg" alt="cupcake">
           <div class="text">
             <h3>Vanilla & Chocolate </h3>
+            <br>
             <p>Classic Madagascar vanilla cupcake with a whipped chocolate frosting topped with strawberrys</p>
             <button>25 SEK</button>
           </div>
@@ -151,6 +160,7 @@
           <img src="./img/cupcakes/Cupcake2.jpg" alt="cupcake">
           <div class="text">
             <h3>Strawberry Cheesecake</h3>
+            <br>
             <p>Strawberry cheesecake baked with fresh strawberries and a graham cracker crust.</p>
             <button>25 SEK</button>
           </div>
@@ -159,6 +169,7 @@
           <img src="./img/cupcakes/Cupcake3.jpg" alt="cupcake">
           <div class="text">
             <h3>Ferrero Rocher Chocolate</h3>
+            <br>
             <p>Chocolate ganache, whipped cream, and nuts in between layers of dark chocolate </p>
             <button>25 SEK</button>
           </div>
@@ -167,6 +178,7 @@
           <img src="./img/cupcakes/Cupcake4.jpg" alt="cupcake">
           <div class="text">
             <h3>Flower cupcake</h3>
+            <br>
             <p>Madagascar vanilla cupcake with baby pink vanilla buttercream</p>
             <button>35 SEK</button>
           </div>
@@ -175,6 +187,7 @@
           <img src="./img/cupcakes/Cupcake5.jpg" alt="cupcake">
           <div class="text">
             <h3>Pink Rose</h3>
+            <br>
             <p>Valrhona chocolate cupcake with bubblegum pink vanilla buttercream</p>
             <button>30 SEK</button>
           </div>
@@ -183,6 +196,7 @@
           <img src="./img/cupcakes/Cupcake6.jpg" alt="cupcake">
           <div class="text">
             <h3>Valentine Unicorn</h3>
+            <br>
             <p>Madagascar vanilla cupcake with baby pink vanilla buttercream</p>
             <button>25 SEK</button>
           </div>
@@ -191,6 +205,7 @@
           <img src="./img/cupcakes/Cupcake7.jpg" alt="cupcake">
           <div class="text">
             <h3>Raspberry Chocolate Chip</h3>
+            <br>
             <p>Raspberry cupcake with chocolate ganache frosting and a fondant decoration</p>
             <button>25 SEK</button>
           </div>
@@ -199,6 +214,7 @@
           <img src="./img/cupcakes/Cupcake9.jpg" alt="cupcake">
           <div class="text">
             <h3>Caramel Chocolate</h3>
+            <br>
             <p>Classic Madagascar vanilla cupcake with chocolate mousse and chocolate ganache</p>
             <button>25 SEK</button>
           </div>
@@ -211,33 +227,24 @@
 <!-- Products -->
 
 
- <!-- Footer -->
- <footer class="footer">
+   <!-- Footer -->
+   <footer class="footer">
     <!-- Sending an email to the email address -->
-    <a href="mailto:martalouri@gmail.com" class="footer__link">martalouri@gmail.com</a>
+    <a href="mailto:softwaredevelopmentacademy@gmail.com?subject=I have a question!&body=Name:%0DPhone:%0DQuestion:" class="footer__link">Contact us by email</a>
     <!-- Social media icons -->
     <ul class="social-list">
         <li class="social-list__item">
-            <a class="social-list__link" href="https://codepen.io/martalourido">
-                <i class="fab fa-codepen"></i>
+            <a class="social-list__link" href="https://www.facebook.com/tastemadeSweeten/">
+              <i class="fab fa-facebook-square"></i>
             </a>
         </li>
         <li class="social-list__item">
-            <a class="social-list__link" href="https://www.linkedin.com/in/marta-lourido-a8714a100/?locale=en_US">
-                <i class="fab fa-linkedin-in"></i>
-            </a>
-        </li>
-        <li class="social-list__item">
-            <a class="social-list__link" href="https://twitter.com/martalouri">
-                <i class="fab fa-twitter"></i>
-            </a>
-        </li>
-        <li class="social-list__item">
-            <a class="social-list__link" href="https://github.com/MartaLourido">
-                <i class="fab fa-github"></i>
+            <a class="social-list__link" href="https://www.instagram.com/sweetcupcake.shop/?igshid=gp7el90uhhr7">
+                <i class="fab fa-instagram"></i>
             </a>
         </li>
     </ul>
-</div>
 </footer>
+</body>  
+</html>
 
