fixed problems centering the cards in the product.css file

--- a/products.html
+++ b/products.html
@@ -35,7 +35,7 @@
             </label>
       
             <ul class="menu">
-              <li><a class="nav-link" href="./home.html">Home</a></li>
+              <li><a class="nav-link" href="./index.html">Home</a></li>
               <li><a class="nav-link" href="./products.html">Products</a></li>
               <li><a class="nav-link" href="./about.html">About</a></li>
               <li><a class="nav-link" href="./contact.html">Contact</a></li>
@@ -72,6 +72,7 @@
             <h3>Classic Red Velvet</h3>
             <br>
             <p>Melt in your mouth Red Velvet Cake made with a cream cheese filling</p>
+            <br>
             <button>250 SEK</button>
           </div>
         </article>
@@ -81,6 +82,7 @@
             <h3>Supreme Vanilla</h3>
             <br>
             <p>Full of flavor Vanilla Cake with a Caramel Cream Filling</p>
+            <br>
             <button>250 SEK</button>
           </div>
         </article>
@@ -90,6 +92,7 @@
             <h3>Sprint Lemon Cake</h3>
             <br>
             <p>Lemon pound cake, and blueberry marmalade and white chocolate mousse fillings</p>
+            <br>
             <button>250 SEK</button>
           </div>
         </article>
@@ -99,6 +102,7 @@
             <h3>Winter Gingerbread</h3>
             <br>
             <p>Layers of gingerbread cake with lemon mousse filling</p>
+            <br>
             <button>250 SEK</button>
           </div>
         </article>
@@ -108,6 +112,7 @@
             <h3>Black Forest Cake</h3>
             <br>
             <p>Chocolate ganache, whipped cream, and cherries in between layers of dark chocolate </p>
+            <br>
             <button>250 SEK</button>
           </div>
         </article>
@@ -117,6 +122,7 @@
             <h3>Berries-N-Cream Cake</h3>
             <br>
             <p>Velvety white cake with mixed berries and a velvety cheesecake in between each layer</p>
+            <br>
             <button>250 SEK</button>
           </div>
         </article>
@@ -126,6 +132,7 @@
             <h3>Death By Chocolate</h3>
             <br>
             <p>Layers of dark chocolate cake, with chocolate mousse and chocolate ganache in between each layer</p>
+            <br>
             <button>250 SEK</button>
           </div>
         </article>
@@ -135,6 +142,7 @@
             <h3>Sunshine Cake</h3>
             <br>
             <p>Double chocolate cake soaked with Kahlua, and filled with a mocha buttercream and chocolate ganache</p>
+            <br>
             <button>250 SEK</button>
           </div>
         </article>
@@ -153,6 +161,7 @@
             <h3>Vanilla & Chocolate </h3>
             <br>
             <p>Classic Madagascar vanilla cupcake with a whipped chocolate frosting topped with strawberrys</p>
+            <br>
             <button>25 SEK</button>
           </div>
         </article>
@@ -162,6 +171,7 @@
             <h3>Strawberry Cheesecake</h3>
             <br>
             <p>Strawberry cheesecake baked with fresh strawberries and a graham cracker crust.</p>
+            <br>
             <button>25 SEK</button>
           </div>
         </article>
@@ -171,6 +181,7 @@
             <h3>Ferrero Rocher Chocolate</h3>
             <br>
             <p>Chocolate ganache, whipped cream, and nuts in between layers of dark chocolate </p>
+            <br>
             <button>25 SEK</button>
           </div>
         </article>
@@ -180,6 +191,7 @@
             <h3>Flower cupcake</h3>
             <br>
             <p>Madagascar vanilla cupcake with baby pink vanilla buttercream</p>
+            <br>
             <button>35 SEK</button>
           </div>
         </article>
@@ -189,6 +201,7 @@
             <h3>Pink Rose</h3>
             <br>
             <p>Valrhona chocolate cupcake with bubblegum pink vanilla buttercream</p>
+            <br>
             <button>30 SEK</button>
           </div>
         </article>
@@ -198,6 +211,7 @@
             <h3>Valentine Unicorn</h3>
             <br>
             <p>Madagascar vanilla cupcake with baby pink vanilla buttercream</p>
+            <br>
             <button>25 SEK</button>
           </div>
         </article>
@@ -207,6 +221,7 @@
             <h3>Raspberry Chocolate Chip</h3>
             <br>
             <p>Raspberry cupcake with chocolate ganache frosting and a fondant decoration</p>
+            <br>
             <button>25 SEK</button>
           </div>
         </article>
@@ -216,6 +231,7 @@
             <h3>Caramel Chocolate</h3>
             <br>
             <p>Classic Madagascar vanilla cupcake with chocolate mousse and chocolate ganache</p>
+            <br>
             <button>25 SEK</button>
           </div>
         </article>
