--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             </label>
       
             <ul class="menu">
-              <li><a class="nav-link" href="./home.html">Home</a></li>
+              <li><a class="nav-link" href="./index.html">Home</a></li>
               <li><a class="nav-link" href="./products.html">Products</a></li>
               <li><a class="nav-link" href="./about.html">About</a></li>
               <li><a class="nav-link" href="./contact.html">Contact</a></li>
