--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             </label>
       
             <ul class="menu">
-              <li><a class="nav-link" href="./home.html">Home</a></li>
+              <li><a class="nav-link" href="./index.html">Home</a></li>
               <li><a class="nav-link" href="./products.html">Products</a></li>
               <li><a class="nav-link" href="./about.html">About</a></li>
               <li><a class="nav-link" href="./contact.html">Contact</a></li>
@@ -78,7 +78,7 @@
            <span class="error"><i class="fas fa-circle"></i> </span>
          </p>
          <br />
-         <p><input name="subject" type="text" placeholder="Subject"  />
+         <p><input name="subject" type="text" placeholder="Subject"/>
          <p>
           <textarea name="body" placeholder="Write here your text" ></textarea>
          </p>
